--- a/package.json
+++ b/package.json
@@ -23,17 +23,18 @@
     "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-sharp": "^2.6.42",
     "gatsby-plugin-styled-components": "^3.3.14",
-    "gatsby-plugin-typography": "^2.5.13",
     "gatsby-source-filesystem": "^2.3.34",
     "gatsby-transformer-sharp": "^2.5.17",
+    "prism-react-renderer": "^1.1.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-redux": "^7.2.1",
-    "react-typography": "^0.16.19",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
+    "rehype-katex": "^4.0.0",
+    "remark-math": "^4.0.0",
     "styled-components": "^5.2.0",
     "typography": "^0.16.19"
   },
