--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mdx-js/mdx": "^1.6.19",
     "@mdx-js/react": "^1.6.19",
     "@reduxjs/toolkit": "^1.4.0",
+    "babel-plugin-styled-components": "^1.11.1",
     "gatsby": "^2.24.85",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-google-fonts": "^1.0.1",
